--- a/css/index.css
+++ b/css/index.css
@@ -100,7 +100,7 @@ aside ul li {
   padding: 1em 0 1em 1em;
 }
 aside ul li:last-child a{padding-right:1em;}
-aside ul li a{
+.menu aside ul li a{
   opacity: 0.6;
   color: #eb2828;
   font-size: 15px;
@@ -155,7 +155,7 @@ section.content{
   color:#fff;
 }
 .content div{
-  height: 100%;
+  height: 360px;
   margin:2em 0 2em 2em;
 }
 .content article{
