--- a/css/plugins/tagCloud.css
+++ b/css/plugins/tagCloud.css
@@ -1,15 +1,13 @@
 .tagCloud{
-	border-radius:200px;
-	background-color:rgba(90, 210, 190, 0.6);
+	background:#000 url(../../images/p/tagCloud/bg.png) no-repeat;
 	position:absolute;
 	z-index:10000;
-	top:50%;
-	left:50%;
-	margin-left:-200px;
-	margin-top:-200px; /*临时限制，同下*/
-	width:400px;
-	height:400px; /*临时限制，需要通过JS通过数据大小去计算合适的大小*/
-	box-shadow:2px 2px 3px rgba(78, 150,150, 0.5);
+	 width:100%; 
+	 height:100%;
+	 margin:0;
+	 padding:0;
+	 top:0;
+	 left: 0;
 }
 .tagCloud .tc-tagsOuter{
 	position:relative;
@@ -17,10 +15,13 @@
 	left:0;
 	width:100%;
 	height:100%;
+	margin: 0 auto;
+	padding: 0;
 }
 .tagCloud .tc-tagItem{
 	list-style:none;
 	font-size:13px;
+	font-weight: bolder;
 	position:absolute;
 	top:200px;
 	left:200px;
@@ -29,7 +30,7 @@
 .tagCloud .tc-tagItem a{
 	text-decoration: none;
 	padding: 3px;
-	color: #d33;
+	color: #fff;
 	display: inline-block;
 	border-width: 1px;
 	border-color: none;
