--- a/css/index.css
+++ b/css/index.css
@@ -124,15 +124,16 @@ aside ul li a:hover{
   height: 100%;
   padding: 0;
   margin: 0;
-  background: url(../images/bg/body_bg.png) repeat 0 0;
+  background: url(../images/bg/slider_bg.png) no-repeat 0 0;
+  /*background: none;*/
 }
 .slider_bg ul li{
   width: 100%;
   height: 100%;
-  position: relative;
+  /*position: relative;*/
   padding: 0;
   margin: 0;
-  float:left;
+  /*float:left;*/
 }
 .slider_bg ul li img{
   position: absolute;
@@ -173,4 +174,88 @@ section.content{
 }
 .content p{
   font-size:13px;
+}
+
+
+@-webkit-keyframes bgSlide1{
+  0%{
+    opacity: 1;
+  }
+  25%{
+    opacity: 0;
+  }
+  75%{
+    opacity: 0;
+  }
+  100%{
+    opacity: 1;
+  }
+}
+@-webkit-keyframes bgSlide2{
+  0%{
+    opacity: 1
+  }
+  25%{
+    opacity: 1
+  }
+  50%{
+    opacity: 0
+  }
+  100%{
+    opacity: 0
+  }
+}
+@-webkit-keyframes bgSlide3{
+  0%{
+    opacity: 1
+  }
+  50%{
+    opacity: 1
+  }
+  75%{
+    opacity: 0
+  }
+  100%{
+    opacity: 0
+  }
+}
+@-webkit-keyframes bgSlide4{
+  0%{
+    opacity: 1
+  }
+  75%{
+    opacity: 1
+  }
+  100%{
+    opacity: 0
+  }
+}
+#sliderBg{
+  position: relative;
+  top:0;
+  left:0;
+}
+#sliderBg li{
+  position: absolute;
+  top:0;
+  left:0;
+  -webkit-animation-timing-function: ease-in;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-duration: 28s;
+}
+#sliderBg li:nth-child(1) {
+  -webkit-animation-name: bgSlide1;
+  z-index: 10
+}
+#sliderBg li:nth-child(2) {
+  -webkit-animation-name: bgSlide2;
+  z-index: 9;
+}
+#sliderBg li:nth-child(3) {
+  -webkit-animation-name: bgSlide3;
+  z-index: 8;
+}
+#sliderBg li:nth-child(4) {
+  -webkit-animation-name: bgSlide4;
+  z-index: 7;
 }
