--- a/css/index.css
+++ b/css/index.css
@@ -124,8 +124,7 @@ aside ul li a:hover{
   height: 100%;
   padding: 0;
   margin: 0;
-  background: url(../images/bg/slider_bg.png) no-repeat 0 0;
-  /*background: none;*/
+  background: url(../images/bg/slider_bg_1.jpg) no-repeat 0 0;
 }
 .slider_bg ul li{
   width: 100%;
