--- a/css/index.css
+++ b/css/index.css
@@ -7,10 +7,9 @@ header{
   color: #C2BDB7;
   font-family: 'BebasNeueRegular';
   font-size: 40px;
-  line-height: 1em;
-  padding: .6em 1em .6em 1.5em;
+  line-height: 0;
   position: absolute;
-  top: -2.2em;
+  top: -100%;
   left: 0;
   background-color: white;
 }
@@ -23,6 +22,10 @@ section.menu{
   top: 30%;
   left: 50%;
   margin-left: -40em;
+}
+.menu .logo{
+  width: 87px;
+  height: 87px;
 }
 nav{
   float:left;
@@ -114,7 +117,10 @@ section.content{
 .content p{
   font-size:13px;
 }
-
+.content a{
+  color: #fff;
+  padding: 5px;
+}
 
 @-webkit-keyframes bgSlide1{
   0%{
